# cct

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  INSTALL.md  README.md  install-hook.sh  install.sh  kimi-backend.patch
.claude/: resource-cache.json  resource-visited.json  settings.json
.codex/: config.toml
docs/failures/: launch-failure-20260715144129.md
docs/handoff/: handoff-20260717140936-kimi-backend-max-context.md
docs/issues/: _template.md
docs/lessons/: _template.md  cct-env-exec-no-shell-expansion.md  clap-subcommand-sync-spawn-args.md  external-tool-config-schema-must-be-verified.md  gitlab-cicd-rust-musl-cross-compilation.md  gitlab-runner-ssh-cloning-self-hosted.md  happy-daemon-env-injection-via-cct.md  install-script-404-network-issue.md
docs/modules/: _template.md  app.md  cli.md  config.md  launch.md  ui.md
docs/quality/: _template.md
docs/references/: _template.md  cc-switch-codex-protocol-conversion.md  codex-backend-development-guide.md  codex-configuration-reference.md  codex-home-storage-layout.md  index.md  install-script.md
docs/rules/: _template.md  assert-contracts-not-incidental-platform-strings.md  cross-module-features-need-contract-tests.md  hotkey-ui-changes-must-be-discoverable.md  mask-secrets-on-every-display-path.md  preserve-user-edited-config-structure.md  pure-builders-thin-effectful-edges.md  single-source-of-truth-variant-mappings.md  tui-cli-sync.md  (+2 more)
src/: app.rs  cli.rs  config.rs  launch.rs  lib.rs  main.rs  proxy.rs  ui.rs
tests/: integration.rs
(+186 files in other folders)
