[package]
name = "cct"
version = "0.4.0"
edition = "2021"

[lib]
name = "cct"
path = "src/lib.rs"

[[bin]]
name = "cct"
path = "src/main.rs"

[dependencies]
clap      = { version = "4", features = ["derive"] }
ratatui   = "0.29"
crossterm = "0.28"
serde     = { version = "1", features = ["derive"] }
toml      = "0.8"
toml_edit = "0.22"
dirs      = "5"
anyhow     = "1"
serde_json = "1"
shell-words = "1.1.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
